# v12

./: .gitignore  Anchor.toml  CANDY.md  README.md  harmonia-keypair.json  memo  next.config.js  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  tmp  tsconfig.json  webpack.config.js  whitepaper.md
.cache/: devnet-temp
.nuxt/: App.js  index.js  router.js  routes.json
abc/: README.md  package.json  vue.config.js
app/: README.md  entity-cli.json  nuxt.config.js  package.json  vue.config.js
assets/: styles.scss
back/: package.json
cli-candy/: CANDY.md
components/: Jumbotron.vue  NewProjects.vue  PairButton.tsx  Partners.tsx  hashDialog.tsx
css/: custom-icons.min.css  master.css  style.css
elements/: AlertDismissible.tsx  CartMenu.tsx  Marker.tsx  SearchItem.tsx
firebase/: firebaseConfig.tsx
front/: .eslintrc.js  package.json  vue.config.js
helpers/: AnimatedProgressProvider.js  AnimatedProgressProvider.tsx  hashconnect.ts  hashconnect.tsx  useWindowResizeListener.js
layouts/: default.vue  fixed.vue
pages/: 404.tsx  _app.tsx  about.tsx  career.tsx  comingSoon.tsx  contactUs.tsx  faq.tsx  index.tsx  index.vue  login.tsx  news.tsx  privacy.tsx  project_e_commerce.code-workspace  reports.js  reports.tsx  services.tsx  termCondition.tsx
programs/candy-machine/: Cargo.toml
programs/candy-machine/src/: lib.rs
public/: index.html
reactApp/: .env  package-lock.json  package.json
registry/: .env  package.json  tsconfig.json
registry(react.js)/: package.json  tsconfig.json
registry2/: next.config.js  package-lock.json  (+1 more)
(+797 files in other folders)
