[package]
name = "candy-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "candy_machine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.0"
arrayref = "0.3.6"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { path = "../../../metaplex/rust/token-metadata/program", features = [ "no-entrypoint" ] }